Creating Struct for storege

--- a/src/ProductSearchEngine.CrossCutting/ProductSearchEngine.CrossCutting.csproj
+++ b/src/ProductSearchEngine.CrossCutting/ProductSearchEngine.CrossCutting.csproj
@@ -6,4 +6,20 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
+	  <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.5">
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	  </PackageReference>
+	  <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.5">
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	  </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ProductSearchEngine.Infrastructure\ProductSearchEngine.Infrastructure.csproj" />
+    <ProjectReference Include="..\ProductSearchEngine.Services\ProductSearchEngine.Services.csproj" />
+  </ItemGroup>
+
 </Project>
