--- a/src/ProductSearchEngine.WebUI/appsettings.json
+++ b/src/ProductSearchEngine.WebUI/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "ConnectionStrings": {
+    //Local
+    "DefaultConnection": "Filename=./Data/ProductSearchEngine.db"
+    //Azure
+    //"DefaultConnection": "Filename=D:/home/site/wwwroot/Data/ProductSearchEngine.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
