--- a/src/ProductSearchEngine.WebUI/ProductSearchEngine.WebUI.csproj
+++ b/src/ProductSearchEngine.WebUI/ProductSearchEngine.WebUI.csproj
@@ -7,8 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ProductSearchEngine.CrossCutting\ProductSearchEngine.CrossCutting.csproj" />
     <ProjectReference Include="..\ProductSearchEngine.Domain\ProductSearchEngine.Domain.csproj" />
     <ProjectReference Include="..\ProductSearchEngine.Services\ProductSearchEngine.Services.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Data\" />
   </ItemGroup>
 
 </Project>
